--- a/app_/views/portofolio.ejs
+++ b/app_/views/portofolio.ejs
@@ -469,7 +469,7 @@
             <h1 class="text-4xl py-6 text-center">Education</h1>
             <div class="flex items-center justify-center flex-wrap">
               <div class="bg-blue-200 dark:bg-blue-600 rounded-lg p-4">
-                <h1 class="text-2xl">IT Techniques from <span class="font-extralight">Cégep André-Laurendau</span></h1>
+                <h1 class="text-2xl">IT Techniques - <span class="font-extralight">Cégep André-Laurendau</span></h1>
                 <h4 class="py-4 font-extralight text-xl">2024 - 2027</h4>
                 <p class="text-lg tracking-wide">
                   Application development and computer network administration
