--- a/app_/views/admin/login.ejs
+++ b/app_/views/admin/login.ejs
@@ -9,14 +9,13 @@
     <title>Admin | Login</title>
 </head>
 <body>
-    <div class="w-full h-full bg-gray-800 fixed flex items-center justify-center">
-        <form class="rounded-lg w-52 shadow-xl px-4 py-8 bg-white" action="/profile/admin/login" method="post">
+    <div class="my-20 mx-10 flex items-center justify-center">
+        <form class="rounded-lg max-w-80 shadow-xl p-8 bg-gray-200" action="/profile/admin/login" method="post">
+            <p class="flex items-center justify-center mt-[-1rem] mb-4">
+                <img class="size-8" src="../../imgs/logo.png" alt="logo">
+            </p>
             <% if (msg.active) { %>
-                <p class="p-2 mb-2 text-center bg-red-200 text-red-600 font-semibold rounded-lg"><%= msg.content %></p>
-            <% }else{ %>
-                <p class="flex items-center justify-center mt-[-1rem] mb-4">
-                    <img class="size-8" src="../../imgs/logo.png" alt="logo">
-                </p>
+                <p class="p-4 mb-2 text-center bg-red-100 text-red-500 font-semibold rounded-lg"><%= msg.content %></p>
             <% } %>
             <p>
                 <input class="bg-transparent w-full p-2 text-center text-gray-600 ring-1 focus:ring-blue-300 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" type="password" name="access" placeholder="Access code" required>
